--- a/README.Rmd
+++ b/README.Rmd
@@ -38,7 +38,7 @@ knitr::opts_chunk$set(echo = TRUE)
 <a name="1. Einleitung">1. Introduction</a>
 </h3>
 
-When managing ecosystems the question is how to simultaneously combat biodiversity loss and maintain ecosystem functioning while increasing human welfare. Designing multi-functional landscapes means deciding upon the composition and configuration of land-cover types, given that landscape patterns drive the landscape`s ecological value and its ability to satisfy societal demands. Land-cover allocation models, particularly optimization approaches, have proven helpful in revealing trade-offs between multiple objectives and services provided by different land-cover compositions.
+When managing ecosystems the question is how to simultaneously combat biodiversity loss and maintain ecosystem functioning while increasing human welfare. Designing multifunctional landscapes means deciding upon the composition and configuration of land-cover types, given that landscape patterns drive the landscape`s ecological value and its ability to satisfy societal demands. Land-cover allocation models, particularly optimization approaches, have proven helpful in revealing trade-offs between multiple objectives and services provided by different land-cover compositions.
 
 The R package **optimLanduse** provides functions for easy and systematic applications of the robust multiobjective land-cover composition optimization approach of Knoke et al. (2016). It includes tools to determine the land-cover composition that best balances the multiple functions and services a landscape can provide and tools for deeper understanding and visualizing the contributions of the distinct indicators. The method has been developed and applied in a series of studies before. You find some examples in the <a href="#8. Literatur">literature</a> section. The methodological background of the approach can e.g. be found in Knoke et al. (2016) and Husmann et al. (n.d). We here refer to the nomenclature of Husmann et al. (n.d.). The package opens the approach of Knoke et al. (2016) to the community of landscape planners and provides opportunities for systematic or batch applications. To further enhance this, we have designed a shiny dashboard for the package to get a quick idea of its functionalities and the modeling philosophy of the overall approach, see <http://134.76.17.50/optimlanduse_shiny/>.
 
@@ -205,7 +205,6 @@ ggplot(performance$scenarioTable,
 
 *Fig. 3: The performances of each of the 10 indicators for the ideal farm composition. The colored points are the achieved levels of the indicators of all scenarios. The dotted, horizontal red line illustrates the guaranteed performances* $(1-\beta)$*, thus the robust feasible solution of the program (Equation 1 in Husmann et al (n.d.)).*
 
-
 Fig. 3 can be used to further explore the effects of the indicators on the modeled land-use decisions. Looking at the performances of this multi-functional farm reveals, which indicator equals $\beta$ and therefore defines the result (Equation 1 in Husmann et al. (n.d.)).
 
 Here, the worst performing scenarios of indicators 1 (financial stability), 3 (investment costs) and 8 (meeting household needs) have equally the largest distances. It can be seen that the portfolio is apparently driven by these 3 indicators. In the worst-performing uncertainty scenarios, these 3 indicators show the maximum distances across all indicators. In other words, the guaranteed performance $1-\beta$ (lowestPerformance) is defined by these indicators. A full list with performance of all individual scenarios is provided by the output *scenarioTable* after using the *calcPerformance()* function (Table 2).
@@ -274,7 +273,7 @@ ggplot(performance_current$scenarioTable,
 
 Setting the arguments for the lower and upper bounds exactly to the currently observed land-cover composition forces a solution that corresponds to the current land-cove composition (Fig. 4). It allows to compare and evaluate the differences of the optimized land-cover composition with the currently observed composition. Comparing e.g. the guaranteed performances $1-\beta$ provides objective measure how an optimization enhances the achievements of the overall performance. A deeper look at the performances of the indicators reveals which indicators particularly benefit from optimization. Due to the compromise nature of the approach, indicators can also fall off in the optimized portfolio.
 
-Amounting to 0.387, the guaranteed performance of the multi-functional portfolio is considerably higher then the guaranteed performance of the current land-cover composition (0.089). Each of the indicators considered is thus fulfilled by at least 38.7% compared to its maximum individual achievable level in the optimized portfolio. The comparison of the performances of the currently observed land-cover composition (Fig. 4) with the performances of the multi-functional portfolio (Fig. 3) reveals that, for example, the performance of the financial stability is significantly higher in the optimized portfolio. The performance of meeting households needs and liquidity, for example, decreases significantly. The price to be paid for the best-possible compromise is thus a fundamentally lower performance of the both indicators that approximate the immediate economic success. The generally desirable multi-functional portfolio therefore does not promise immediate economic success for the farmers.
+Amounting to 0.387, the guaranteed performance of the multi-functional portfolio is considerably higher then the guaranteed performance of the current land-cover composition (0.089). Each of the indicators considered is thus fulfilled by at least 38.7% compared to its individual achievable level in the optimized portfolio. The comparison of the performances of the currently observed land-cover composition (Fig. 4) with the performances of the multi-functional portfolio (Fig. 3) reveals that, for example, the performance of the financial stability is significantly higher in the optimized portfolio. The performance of meeting households needs and liquidity, for example, decreases significantly. The price to be paid for the best-possible compromise is thus a fundamentally lower performance of the both indicators that approximate the immediate economic success. The generally desirable multi-functional portfolio therefore does not promise immediate economic success for the farmers.
 
 
 <h3>
